--- a/src/views/bill/y-bill/fukuan.html
+++ b/src/views/bill/y-bill/fukuan.html
@@ -105,10 +105,10 @@
                                     <label class="layui-form-label">支付方式</label>
                                     <div class="layui-input-inline">
                                         <select name="PayType" >
-                                            <option value="">现金</option>
-                                            <option value="0">支付宝</option>
-                                            <option value="1" selected="">微信</option>
-        
+                                            <option value="现金">现金</option>
+                                            <option value="支付宝">支付宝</option>
+                                            <option value="微信" selected="">微信</option>
+                                            <option value="银行卡转账" selected="">银行卡转账</option>
                                         </select>
                                     </div>
                                 </div>
