--- a/src/views/house/h-house/index.html
+++ b/src/views/house/h-house/index.html
@@ -42,7 +42,7 @@
                         <div class="m-top m-zt-y" id="m-top">
                             <ul>
                                 <li>
-                                    <span style="">{{itemtop.Name}}</span>
+                                    <span class="housename">{{itemtop.Name}}</span>
                                     <span class="caidan-icon" id="caidan-icon-{{itemtop.ID}}" view="false">
                                         <i class="layui-icon" id="lay-ic-{{itemtop.ID}}" style="font-size:22px;" view="false">&#xe65f;</i>
                                     </span>
@@ -64,7 +64,7 @@
                         <div class="m-top m-zt-k" id="m-top">
                             <ul>
                                 <li>
-                                    <span class="fylx">{{formatter1(itemtop.sign)}}</span><span style="">{{itemtop.Name}}</span>
+                                    <span class="fylx">{{formatter1(itemtop.sign)}}</span><span class="housename">{{itemtop.Name}}</span>
                                     <span class="caidan-icon" id="caidan-icon-{{itemtop.ID}}" view="false">
                                         <i class="layui-icon" id="lay-ic-{{itemtop.ID}}" style="font-size:22px;" view="false">&#xe65f;</i>
                                     </span>
