--- a/src/views/house/z-house/index.html
+++ b/src/views/house/z-house/index.html
@@ -17,7 +17,7 @@
                 <div class="m-top m-zt-y" id="m-top">
                     <ul>
                         <li>
-                           <span style="">{{itemtop.CellName}}-{{itemtop.BuildingNumber}}号-{{itemtop.BuildingNumber}}单元-{{itemtop.RoomId}}室</span>
+                           <span class="housename">{{itemtop.CellName}}-{{itemtop.BuildingNumber}}号-{{itemtop.BuildingNumber}}单元-{{itemtop.RoomId}}室</span>
 
                             <span class="caidan-icon" id="caidan-icon-{{itemtop.Id}}" view="false">
                                 <i class="layui-icon" id="lay-ic-{{itemtop.Id}}" style="font-size:22px;" view="false">&#xe65f;</i>
@@ -42,7 +42,7 @@
                 <div class="m-top m-zt-k" id="m-top">
                     <ul>
                         <li>
-                            <span class="fylx">{{formatter1(itemtop.sign)}}</span><span style="">{{itemtop.CellName}}-{{itemtop.BuildingNumber}}号-{{itemtop.BuildingNumber}}单元-{{itemtop.RoomId}}室</span>
+                            <span class="fylx">{{formatter1(itemtop.sign)}}</span><span class="housename">{{itemtop.CellName}}-{{itemtop.BuildingNumber}}号-{{itemtop.BuildingNumber}}单元-{{itemtop.RoomId}}室</span>
                             <span class="caidan-icon" id="caidan-icon-{{itemtop.Id}}" view="false">
                                 <i class="layui-icon" id="lay-ic-{{itemtop.Id}}" style="font-size:22px;" view="false">&#xe65f;</i>
                             </span>
