--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -45,7 +45,7 @@
         </a>
       </li>
       <li class="layui-nav-item" lay-unselect>
-        <script type="text/html" template lay-url="{{layui.setter.baseurl}}api/Sysuser/QueryUser" 
+        <script type="text/html" template lay-url="{{layui.setter.baseurl}}api/Sysuser/QueryUser1" 
          lay-data="{access_token:'{{ layui.data('layuiAdmin').access_token }}'}" data-lay-type="post"
         lay-done="layui.element.render('nav', 'layadmin-layout-right');" >
           <a href="javascript:;">
