--- a/src/views/bill/y-bill/fukuan.html
+++ b/src/views/bill/y-bill/fukuan.html
@@ -6,7 +6,7 @@
     .yspan{margin-right:20px;}
 </style>
 <script type="text/html" template >
-    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
+    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex,d.params.btnOption)}}
 </script>
 <script id="billreceivescript" type="text/html">
     {{# var doc = layui.htcsLG;}}
