--- a/src/views/bill/y-bill/edit.html
+++ b/src/views/bill/y-bill/edit.html
@@ -14,7 +14,7 @@
 </style>
 <script>
     var selectdata=[];
-    function LoadData(id,tableid,layerindex){
+    function LoadData(id,tableid,layerindex,btnOption){
     layui.use(['laydate', 'laypage', 'htcsLG','layer', 'laytpl', 'jquery', 'form'], function () {
     var laytpl = layui.laytpl;
     var doc = layui.htcsLG;
@@ -101,6 +101,7 @@ form.on('submit(save)', function (data) {
         url:'api/Bill/save',
         data:tjdata,
         tableid:tableid,
+        btnOption:btnOption,
         callBack:function(resultData){
         if (resultData.Code == 0) {
                 layer.close(layerindex);
@@ -181,7 +182,7 @@ function ns(value){
 </script>
 <!--结束-->
 <script type="text/html" template >
-    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
+    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex,d.params.btnOption)}}
 </script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
