--- a/src/views/bill/z-bill/receive.html
+++ b/src/views/bill/z-bill/receive.html
@@ -3,7 +3,7 @@
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
 <script type="text/html" template >
-    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
+    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex,d.params.btnOption)}}
 </script>
 <script id="billreceivescript" type="text/html">
     {{# var doc = layui.htcsLG;}}
