--- a/src/views/contract/y-contract/tuizu.html
+++ b/src/views/contract/y-contract/tuizu.html
@@ -30,7 +30,7 @@
     var util;
     var laydate;
 
-    function LoadData(id, tableid, layerindex) {
+    function LoadData(id, tableid, layerindex,btnOption) {
         layui.use(['laydate', 'laypage', 'htcsLG', 'layer', 'laytpl', 'jquery', 'form'], function () {
             var laytpl = layui.laytpl;
             var doc = layui.htcsLG;
@@ -306,7 +306,7 @@
 </script>
 <!--结束-->
 <script type="text/html" template>
-    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
+    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex,d.params.btnOption)}}
 </script>
 <!--收款项金额-->
 <script type="text/html" id="jine">
