--- a/src/views/contract/y-contract/xuzu.html
+++ b/src/views/contract/y-contract/xuzu.html
@@ -11,10 +11,10 @@
          .rizu{display: none;}
      </style>
   <script type="text/html" template >
-    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
+    {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex,d.params.btnOption)}}
   </script>
   <script>
-      function LoadData(id,tableid,layerindex){
+      function LoadData(id,tableid,layerindex,btnOption){
         layui.use(['laydate', 'laypage', 'layer','htcsradio', 'laytpl', 'jquery', 'form'], function () {
                 var laytpl = layui.laytpl;
                 var doc = layui.htcsLG;
@@ -404,6 +404,7 @@
           url:'api/OwerContract/SaveData',
           data:tjdata,
           tableid:tableid,
+          btnOption:btnOption,
           callBack:function(resultData){
             if (resultData.Code == 0) {
                 layer.close(layerindex);
