--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,13 +2,7 @@
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 </style>
 <script id="zcontractbtnscribt" type="text/html">
-    {{#  layui.each(d, function(index, item){}}
-{{# if(item.Multiple === 1){}}
-<button class="layui-btn layui-btn-primary {{item.BtnNo}}" id="{{item.BtnNo}}" hturl="{{item.ButtonUrl}}">
-<i class="layui-icon {{item.BtnIcon}}"></i>{{item.BtnName}}
-</button>
-{{# }}}
-{{#   });   }}
+  
 </script>
 <script type="text/html" id="conbtnintable">
     <ul class="layui-nav toolbar-nav">
@@ -18,20 +12,6 @@
         </li>
     </ul>
 </script>
-<div id="toolbar">
-    <div class="layui-btn-group">
-        <div id="zcontract-button-view" style="overflow:hidden;"></div>
-        
-    </div>
-</div>
-
-
-
-
-<script type="text/html" id="guestbtnscribt">
-   
-</script>
-
 <script type="text/html" id="btnintable">
     <ul class="layui-nav toolbar-nav">
         <li class="layui-nav-item">
@@ -40,6 +20,43 @@
         </li>
     </ul>
 </script>
+<script type="text/html" id="billbtnintable">
+        
+    <ul class="layui-nav toolbar-nav" >
+            
+        <li class="layui-nav-item">
+            <a href="javascript:;" class="show-more">操作</a>
+            <dl class="layui-nav-child"></dl>
+        </li>
+    </ul>
+</script>
+<!--待收账单-->
+<div id="toolbar">
+    <div class="layui-btn-group">
+        <div id="bill-button-view" style="overflow:hidden;"></div>
+    </div>
+</div>
+<!--待退租-->
+<div id="toolbar">
+    <div class="layui-btn-group">
+        <div id="zcontract-button-view" style="overflow:hidden;"></div> 
+    </div>
+</div>
+<!--待付账单-->
+<div id="toolbar">
+    <div class="layui-btn-group">
+        <div id="ybill-button-view" style="overflow:hidden;"></div>
+    </div>
+</div>
+
+
+<script type="text/html" id="guestbtnscribt">
+   
+</script>
+<script type="text/html" id="ybillbtnscribt">
+   
+</script>
+
 <div class="layui-fluid">
         <div class="layui-row layui-col-space15">
             <div class="layui-col-md8">
@@ -112,15 +129,11 @@
                                     </ul>
                                     <div class="layui-tab-content">
                                         <div class="layui-tab-item layui-show">
-                                            <div id="toolbar">
-                                                        <div class="layui-btn-group">
-                                                            <div id="bill-button-view" style="overflow:hidden;"></div>
-                                                        </div>
-                                             </div>
+                                            
                                             <table id="index-daishou-table" lay-filter="demoEvent"></table>
                                         </div>
                                         <div class="layui-tab-item">
-                                            <table id="index-daifu-table" lay-filter="demoEvent"></table>
+                                            <table id="index-daifu-table" lay-filter="demoEvent2"></table>
                                         </div>
                                         <div class="layui-tab-item">
                                             <table id="index-tuifang-table" lay-filter="demoEvent1"></table>
@@ -129,7 +142,7 @@
                                 </div>
                             </div>
                         </div>
-</div>
+                </div>
             </div>
             <div class="layui-col-md4">
                 <div class="layui-row layui-col-space8">
